--- a/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
+++ b/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
@@ -653,6 +653,7 @@
     <Content Include="img\portfolio\SAPUserAut.jpg" />
     <Content Include="img\portfolio\scania-flat-nose-trucks--photo-110318.jpg" />
     <Content Include="img\portfolio\SL.jpg" />
+    <Content Include="img\portfolio\SMR.jpg" />
     <Content Include="img\portfolio\TransportRequestForm.jpg" />
     <Content Include="img\portfolio\UNDERPROCESS - Copy.png" />
     <Content Include="img\portfolio\UNDERPROCESS.png" />
