--- a/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
+++ b/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
@@ -1843,6 +1843,7 @@
     <Folder Include="css\Classes\" />
     <Folder Include="css\Code\" />
     <Folder Include="css\Content\" />
+    <Folder Include="DashboardDocument\InventoryAdjustment\" />
     <Folder Include="DashboardDocument\QuotationApprovalWorkflow\" />
     <Folder Include="js\bin\" />
     <Folder Include="js\bower_components\" />
