--- a/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
+++ b/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
@@ -622,6 +622,7 @@
     <Content Include="img\portfolio\HR.png" />
     <Content Include="img\portfolio\IMG_4388.jpg" />
     <Content Include="img\portfolio\international_textile_logo.png" />
+    <Content Include="img\portfolio\inventorymanagement.jpg" />
     <Content Include="img\portfolio\invoice.jpg" />
     <Content Include="img\portfolio\ITL LOGO.png" />
     <Content Include="img\portfolio\ITL.png" />
