--- a/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
+++ b/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
@@ -604,6 +604,7 @@
     <Content Include="img\portfolio\AssetsWriteOff.jpg" />
     <Content Include="img\portfolio\AttReport.jpg" />
     <Content Include="img\portfolio\BASIS.jpg" />
+    <Content Include="img\portfolio\BOM.jpg" />
     <Content Include="img\portfolio\calendar.png" />
     <Content Include="img\portfolio\CM.jpg" />
     <Content Include="img\portfolio\Cut_03.jpg" />
