--- a/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
+++ b/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
@@ -602,6 +602,7 @@
     <Content Include="img\portfolio\AssetsDisposal.jpg" />
     <Content Include="img\portfolio\AssetsWriteOff.jpg" />
     <Content Include="img\portfolio\AttReport.jpg" />
+    <Content Include="img\portfolio\AWO.jpg" />
     <Content Include="img\portfolio\BASIS.jpg" />
     <Content Include="img\portfolio\BOM.jpg" />
     <Content Include="img\portfolio\calendar.png" />
